<?xml version="1.0"?>
<!--
SPDX-FileCopyrightText: 2021 Alliander N.V.

SPDX-License-Identifier: Apache-2.0
-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.lfenergy.compas.scl.data</groupId>
    <artifactId>compas-scl-data-service</artifactId>
    <version>local-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <compiler-plugin.version>3.10.1</compiler-plugin.version>
        <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
        <sonarqube-plugin.version>3.2.0</sonarqube-plugin.version>

        <compas.core.version>0.9.1</compas.core.version>

        <quarkus.platform.version>2.11.2.Final</quarkus.platform.version>
        <jaxb-impl.version>2.3.6</jaxb-impl.version>
        <microprofile-openapi-api.version>3.0</microprofile-openapi-api.version>
        <slf4j.version>1.7.36</slf4j.version>
        <openpojo.version>0.9.1</openpojo.version>
    </properties>

    <modules>
        <module>repository</module>
        <module>repository-basex</module>
        <module>repository-postgresql</module>
        <module>service</module>
        <module>app</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github-packages-compas</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/com-pas/compas-scl-data-service</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github-packages-compas</id>
            <name>Github Packages CoMPAS</name>
            <url>https://maven.pkg.github.com/com-pas/*</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-universe-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.lfenergy.compas.scl.data</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.scl.data</groupId>
                <artifactId>repository</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.scl.data</groupId>
                <artifactId>repository-basex</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.scl.data</groupId>
                <artifactId>repository-postgresql</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>commons</artifactId>
                <version>${compas.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>scl-extension</artifactId>
                <version>${compas.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>jaxrs-commons</artifactId>
                <version>${compas.core.version}</version>
            </dependency>

            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${jaxb-impl.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.openapi</groupId>
                <artifactId>microprofile-openapi-api</artifactId>
                <version>${microprofile-openapi-api.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.lfenergy.compas.scl.data</groupId>
                <artifactId>repository</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.openpojo</groupId>
                <artifactId>openpojo</artifactId>
                <version>${openpojo.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <parameters>${maven.compiler.parameters}</parameters>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.jboss.jandex</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>1.2.3</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>sonar</id>

            <properties>
                <sonar.language>java</sonar.language>

                <!-- JaCoCo Properties -->
                <jacoco.version>0.8.8</jacoco.version>
                <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
                <sonar.coverage.jacoco.xmlReportPaths>
                    target/site/jacoco/jacoco.xml,
                </sonar.coverage.jacoco.xmlReportPaths>
            </properties>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.jacoco</groupId>
                            <artifactId>jacoco-maven-plugin</artifactId>
                            <version>${jacoco.version}</version>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <configuration>
                            <exclClassLoaders>*QuarkusClassLoader</exclClassLoaders>
                        </configuration>
                        <executions>
                            <execution>
                                <id>jacoco-initialize</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>jacoco-report</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>release</id>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-source-plugin</artifactId>
                            <version>3.2.1</version>
                            <executions>
                                <execution>
                                    <id>attach-sources</id>
                                    <goals>
                                        <goal>jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>3.4.0</version>
                            <executions>
                                <execution>
                                    <id>attach-javadocs</id>
                                    <goals>
                                        <goal>jar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
